# testembalae

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  tox.ini
testembalae/accounts/: apps.py  urls.py  views.py
testembalae/accounts/tests/: conftest.py
testembalae/base/: apps.py  views.py
testembalae/base/templates/base/: apihome.html
testembalae/core/: admin.py  apps.py  models.py  urls.py  views.py
testembalae/core/migrations/: 0002_create_produto.py  0003_delete_activitylog.py  0004_fornecedor_pedidoentrega_remove_produto_description_and_more.py
testembalae/core/service/: produtos_svc.py
testembalae/core/tests/: conftest.py  test_api_list_produtos.py
testembalae/testembalae/: settings.py  urls.py  wsgi.py
